--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/Carrot Halwa.html">Carrot Halwa</a></li>
+        <li><a href="recipes/Kulfi.html">Kulfi</a></li>
+        <li><a href="recipes/Lassi.html">Lassi</a> </li>
+        <li><a href="recipes/Moong Dal.html">Moong Dal</a> </li>
+    </ul>
 </body>
 </html>
